--- a/Project/frontend/src/pages/Store/myOrders.scss
+++ b/Project/frontend/src/pages/Store/myOrders.scss
@@ -27,9 +27,9 @@
     border-bottom: 1px solid lightgray;
 }
 
-.orderHistoryItem:last-child {
-    border-bottom: none;
-}
+// .orderHistoryItem:last-child {
+//     border-bottom: none;
+// }
 
 .selectedOrderHistoryItem {
     border-left: 5px solid #5F27CD;
