--- a/Project/frontend/src/pages/Inventory/add-item-page/addItem.scss
+++ b/Project/frontend/src/pages/Inventory/add-item-page/addItem.scss
@@ -103,17 +103,17 @@ $fontfam-1: "Poppins", sans-serif;
 	font-size: 0.9em;
 }
 
-.input-field {
+.input-field-add-item {
 	width: 400px;
 	font-size: 1em;
 	padding: 10px 20px;
 	outline: none;
-	margin: 10px 0 15px 0;
 	border: 2px solid $primary-color-navyBlue;
 	border-radius: 10px;
+	margin-top: 5px;
 }
 
-.input-field:focus {
+.input-field-add-item:focus {
 	border-color: $secondary-color-purple1;
 }
 
@@ -147,19 +147,18 @@ $fontfam-1: "Poppins", sans-serif;
 	width: 400px;
 }
 
-.submit-btn {
-	padding: 5px 50px;
+.submit-btn-add-item {
 	width: 150px;
 	outline: none;
-	border: 2px solid transparent;
+	border: 2px solid $secondary-color-purple1;
 	font-size: 18px;
-	background-color: $secondary-color-purple1;
-	color: white;
+	background-color: transparent;
+	color: $secondary-color-purple1;
 	border-radius: 10px;
 	transition: 0.4s;
 }
 
-.reset-btn {
+.reset-btn-add-item {
 	padding: 5px 50px;
 	width: 150px;
 	outline: none;
@@ -171,12 +170,27 @@ $fontfam-1: "Poppins", sans-serif;
 	transition: 0.4s;
 }
 
-.submit-btn:hover {
+.submit-btn-add-item:hover {
 	cursor: pointer;
-	box-shadow: 4px 4px 8px rgba($color: #000000, $alpha: 0.6);
+	background-color: $secondary-color-purple1;
+	color: white;
 }
 
-.reset-btn:hover {
+.reset-btn-add-item:hover {
 	cursor: pointer;
-	box-shadow: 4px 4px 8px rgba($color: #000000, $alpha: 0.6);
+	background-color: $secondary-color-purple1;
+	color: white;
+}
+
+
+.validateErrors{
+	font-size: 0.8em;
+	letter-spacing: 1px;
+	color: crimson;
+	margin-left: 10px;
+	height: 18px;
+}
+
+.visible-non{
+	visibility: hidden;
 }
