--- a/Project/frontend/src/components/dataGrid/customDataGrid.scss
+++ b/Project/frontend/src/components/dataGrid/customDataGrid.scss
@@ -52,3 +52,8 @@
 .customDataGrid .MuiDataGrid-columnHeader:focus-within {
     outline: none !important;
 }
+
+/* Font size for column header */
+.customDataGrid .MuiDataGrid-columnHeader {
+    font-size: 16px;
+}
