--- a/Project/frontend/src/pages/Signin&Signup/SigninSignupStyles.scss
+++ b/Project/frontend/src/pages/Signin&Signup/SigninSignupStyles.scss
@@ -10,7 +10,7 @@ $danger-color: #e74c3c;
 
 // page component css
 .background{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
