--- a/Project/frontend/src/pages/Signin&Signup/SigninSignupStyles.scss
+++ b/Project/frontend/src/pages/Signin&Signup/SigninSignupStyles.scss
@@ -64,7 +64,7 @@ $danger-color: #e74c3c;
     cursor: pointer;
 }
 
-.active{
+.btn-active{
     background-color: rgba($color: #000000, $alpha: .1);
     border-radius: 15px 15px 0 0;
 }
