--- a/Project/frontend/src/pages/Pet/ViewPet.scss
+++ b/Project/frontend/src/pages/Pet/ViewPet.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // background: linear-gradient(106deg, rgba(153, 128, 250, 0.8715861344537815) 0%, rgba(255, 255, 255, 1) 100%);
+   background: linear-gradient(106deg, rgba(217, 209, 252, 0.872) 0%, rgba(255, 255, 255, 1) 100%);
   height: auto;
   min-height: 90vh;
   padding: 40px;
@@ -13,6 +13,9 @@
   justify-content: center;
   align-items: center;
   padding: 30px 80px 30px 50px;
+  background-color: rgba(33, 8, 78, 0.15);
+  border: 2px solid rgba(74, 21, 145, 0.2);
+  border-radius: 8px;
   -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
