--- a/Project/frontend/src/pages/Pet/ViewTreatment.scss
+++ b/Project/frontend/src/pages/Pet/ViewTreatment.scss
@@ -13,6 +13,8 @@
   justify-content: center;
   align-items: center;
   padding: 30px 50px;
+  background-color: rgba(33, 8, 78, 0.15);
+  border: 2px solid rgba(74, 21, 145, 0.2);
   -webkit-box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 0.75);
 }
